# QnA

./: Learning Reflection.docx  Procfile  README.md  main.py  pyproject.toml  requirements.txt  start.sh
QnA/: __init__.py  app.db  clean.py  forms.py  models.py  pdftemplate.py  views.py
QnA/static/: editor.css  editor.js  library.css  login.css  main.css  manage.css  redirects.js  script.js  tag.js  wkeditor.js
QnA/static/upload/: dDXnOqQth1jIPrzntwCVGAvgFOMpOeKNgsdEz3vybMEttH10Z7Kx2t0ZPuWMOfS91zsVmoHxsLvwKNG5cNuA4tasLBUE3qhAP3fB.docx
QnA/templates/: 404.html  _macros.html  create.html  editor.html  index.html  library.html  main.html  manage.html  tag.html  template.html  wkeditor.html
flask_session/: tmp7fjz3fwg.__wz_cache  tmpk64vu3dv.__wz_cache  tmpotjtikgn.__wz_cache  tmpwxqi0leg.__wz_cache
