[tool.poetry]
name = "repl_python3_WA4Project"
version = "0.1.0"
description = ""
authors = ["lion1301 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pdf2image = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
